--- a/.env
+++ b/.env
@@ -6,13 +6,13 @@ SSL_KEY_FILE=./cert/private.key
 SSL_CRT_FILE=./cert/public.crt   
 
 # CORS-Konfiguration
-CORS_ORIGIN=http://localhost:3000  # Erlaubte Herkunft (Frontend)
+#CORS_ORIGIN=http://localhost:3000  # Erlaubte Herkunft (Frontend)
 
 # JWT-Konfiguration
 JWT_SECRET=super-geheimes-passwort  
 JWT_TTL=3600                       
 COOKIE_NAME=access_token           
-
+CORS_ORIGIN=https://geo-pick-points.vercel.app
 # Datenbank-Verbindung
 #DB_CONNECTION_STRING=mongodb://127.0.0.1:27017/geo-pick-points  
 #DB_PREFILL=false     
