--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "@types/bcrypt": "^5.0.2",
   "@types/cookie-parser": "^1.4.7",
   "@types/cors": "^2.8.17",
+  "@types/dotenv": "^8.2.3",
   "@types/express": "^5.0.0",
   "@types/express-validator": "^3.0.2",
   "@types/jsonwebtoken": "^9.0.7",
