--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
  "scripts": {
-  "start": "ts-node src/index.ts",
+
+    "start": "node --max-old-space-size=15192 -r ts-node/register src/index.ts",
   "test": "jest"
  },
  "dependencies": {
