update broken URL to Git resources

--- a/.env
+++ b/.env
@@ -12,7 +12,7 @@ SSL_CRT_FILE=./cert/public.crt
 JWT_SECRET=super-geheimes-passwort  
 JWT_TTL=3600                       
 COOKIE_NAME=access_token           
-CORS_ORIGIN=https://geopick-front-new.vercel.app
+CORS_ORIGIN=https://geopickpoint-new.vercel.app
 # Datenbank-Verbindung
 #DB_CONNECTION_STRING=mongodb://127.0.0.1:27017/geo-pick-points  
 #DB_PREFILL=false     
